--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
-body{
-  background-image: url("img2.jpg");
-  background-size: cover;
+*{
+  margin: 0;
+  padding: 0;
   font-family: "Noto Sans JP", sans-serif;
+
+}
+.gradation{
+  width: 100vw;
+  height: 100vh;
+  background-image: url("kwmt3.jpg");
+  background-size: 100%auto;
+  /*background: -moz-linear-gradient(0deg, #d8bfd8, rgba(255, 255, 255, 0.1));
+  background: -webkit-linear-gradient(0deg, #d8bfd8, rgba(255, 255, 255, 0.1));
+  background: linear-gradient(0deg, #d8bfd8, rgba(255, 255, 255, 0.1));*/
+  display: flex;
 }
 #main{
-  margin: 0 100px;
-  color: rgb(217, 217, 217);
+  margin-left: 50px;
+  color: black;
 }
 h1{
     /*font-family: 'Nixie One', cursive;*/
     font-family: 'Heebo', sans-serif;
     font-size: 70px;
     cursor: default;
+    -webkit-text-stroke:.5px #dcdcdc;
+    color:white;
 }
 h2{
   font-size: 40px;
@@ -22,32 +35,19 @@ ul{
   margin-top: 40px;
 }
 li{
-  font-size: 40px;
+  font-size: 30px;
   cursor: pointer;
 }
 a:link,a:hover,a:visited{
-  color: rgb(217, 217, 217);
   text-decoration: none;
+  -webkit-text-stroke:.2px gray;
+  color:#f5f5f5;
 }
 .main{
   padding-left: 30px;
 }
 .back{
-  margin-top: 10px;
+  margin-top: 50px;
   font-size: 30px;
   cursor: pointer;
-}
-input{
-  color: black;
-}
-
-.blackboard-img {
-  width: 25%;
-  height: 200px;
-  margin: 0;
-  object-fit: cover;
-}
-.blackboard-img:hover {
-  filter:alpha(opacity=50);
-  opacity:0.5;
 }
