--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,8 @@ h1{
     font-family: 'Heebo', sans-serif;
     font-size: 70px;
     cursor: default;
-    -webkit-text-stroke:.5px #dcdcdc;
+    -webkit-text-stroke:.5px gray;
     color:white;
-    background-color: gray;
 }
 h2{
   font-size: 40px;
@@ -36,8 +35,8 @@ li{
 }
 a:link,a:hover,a:visited{
   text-decoration: none;
-  -webkit-text-stroke:.2px gray;
-  color:#f5f5f5;
+  -webkit-text-stroke:.3px gray;
+  color:white;
 }
 .main{
   padding-left: 30px;
