--- a/views/view.ejs
+++ b/views/view.ejs
@@ -7,10 +7,9 @@
 		<title>Knowledge-view</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
-		<link rel="stylesheet" href="css/title.css">
-    <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="views/css/style.css">
 
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -18,20 +17,15 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div id="title">
-			<span class="glitch" data-text="Knowledge">Knowledge</span>
-		</div>
-	</div>
-	<div id="main">
-		<h1><a href="./index.html">Knowledge</h1>
-		<ul>
-			<li><a href="about.html">About</a></li>
-			<li><a href="view.html">View</a></li>
-			<li><a href="schedule.html">schedule</a></li>
-		</ul>
-	</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <div id="main">
+		    <h1><a href="/">Knowledge</a></h1>
+				<h2>View</h2>
+        <div style="background-color:white;">
+          <% imgList.forEach(function(imgItem) { %><img class="blackboard-img" src="/img/<%= imgItem %>" /><% }); %>
+        </div>
+
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="script/script.js"></script>
 	</body>
 </html>
