--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
-		<link rel="stylesheet" href="views/css/title.css">
-    <link rel="stylesheet" href="views/css/style.css">
+		<link rel="stylesheet" href="public/css/title.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -25,14 +25,14 @@
 	<div id="main">
 		<h1><a href="/">Knowledge</h1>
 		<ul>
-			<li><a href="about.html">About</a></li>
+			<li><a href="about">About</a></li>
 			<li><a href="view">View</a></li>
-			<li><a href="schedule.html">schedule</a></li>
+			<li><a href="schedule">Schedule</a></li>
 		</ul>
 
 	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="views/script/script.js"></script>
+		<script type="text/javascript" src="public/script/script.js"></script>
 	</body>
 </html>
