--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -10,9 +10,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
-    <script type="text/javascript" src="script/table_to_csv.js"></script>
+    <script type="text/javascript" src="public/script/table_to_csv.js"></script>
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -20,7 +20,7 @@
 	</head>
 	<body>
     <div id="main">
-		    <h1><a href="./index.html">Knowledge</a></h1>
+		    <h1><a href="/">Knowledge</a></h1>
 				<h2>Schedule</h2>
         <caption>時間割指定</caption>
         <form action="csv" method="POST" target"_blank" onsubmit="doSomething();return false;">
