--- a/views/view.ejs
+++ b/views/view.ejs
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
-    <link rel="stylesheet" href="views/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
