--- a/views/view.ejs
+++ b/views/view.ejs
@@ -20,7 +20,7 @@
     <div id="main">
 		    <h1><a href="/">Knowledge</a></h1>
 				<h2>View</h2>
-        <div style="background-color:white;">
+        <div>
           <% imgList.forEach(function(imgItem) { %><img class="blackboard-img" src="/img/<%= imgItem %>" /><% }); %>
         </div>
 
